Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-12606

[C++] Quantile and Mode functions failing on arrays with offset

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 4.0.0
    • 5.0.0
    • C++, Python
    • macOS, ubuntu

    Description

      Sounds unrelated, but it's the simplest example I've gotten to reproduce.
       

      import pyarrow as pa, pyarrow.compute as pc 
      
      array = pa.array([[0], [1]])
      first, second = [pc.quantile(scalar.values) for scalar in array]
      assert first.to_pylist() == [0]
      assert (second.to_pylist() == [1]), second # 7.20576e+16

      Attachments

        Issue Links

          Activity

            People

              yibocai#1 yibocai#1
              coady A. Coady
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 40m
                  40m