ARROW-12606: [C++][Compute] Fix Quantile and Mode on arrays with offset

Fixed CopyNonNullValues utility to handle arrays with offset correctly.
This patch also fixed quantile kernel random tests for integer types.

Closes #10262 from cyb70289/12606-array-offset

Lead-authored-by: Antoine Pitrou <antoine@python.org>
Co-authored-by: Yibo Cai <yibo.cai@arm.com>
Signed-off-by: Antoine Pitrou <antoine@python.org>